day_2/kustomize/ecm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: PATCH-ME
  name: ecm-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: vault-app-nc
