day_2/kustomize/ecm/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ecm-route
  namespace: PATCH-ME
spec:
  to:
    kind: Service
    name:  ecm-service
    weight: 100
  alternateBackends:
    - kind: Service
      name: ecm-service-green # future use
      weight: 0
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
